--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -189,7 +189,6 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookController.cs" />
-    <Compile Include="Controllers\ChapterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\CultureAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -350,11 +349,10 @@
     <Content Include="Views\Book\Edit.cshtml" />
     <Content Include="Views\Book\Delete.cshtml" />
     <Content Include="Views\Book\IndexAll.cshtml" />
-    <Content Include="Views\Chapter\Index.cshtml" />
-    <Content Include="Views\Chapter\Details.cshtml" />
-    <Content Include="Views\Chapter\Create.cshtml" />
-    <Content Include="Views\Chapter\Edit.cshtml" />
-    <Content Include="Views\Chapter\Delete.cshtml" />
+    <Content Include="Views\Book\ChapterDetails.cshtml" />
+    <Content Include="Views\Book\ChapterCreate.cshtml" />
+    <Content Include="Views\Book\ChapterEdit.cshtml" />
+    <Content Include="Views\Book\ChapterDelete.cshtml" />
     <Content Include="Views\Book\Chapters.cshtml" />
   </ItemGroup>
   <ItemGroup>
