--- a/HelloWorld/packages.config
+++ b/HelloWorld/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.2" targetFramework="net45" />
+  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net45" />
@@ -13,6 +14,8 @@
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
+  <package id="Lucene.Net.Linq" version="3.2.54" targetFramework="net45" />
   <package id="MarkdownDeep.Full" version="1.5" targetFramework="net45" />
   <package id="MarkdownDeep.Full.Sample" version="1.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
@@ -50,6 +53,8 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="postal" version="0.8.2" targetFramework="net45" />
   <package id="RazorEngine" version="3.2.0" targetFramework="net45" />
+  <package id="Remotion.Linq" version="1.13.183.0" targetFramework="net45" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
